--- a/src/MyLibrary/MyLibrary.csproj
+++ b/src/MyLibrary/MyLibrary.csproj
@@ -1,9 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageProjectUrl>https://github.com/linkdotnet/deployment-template</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/linkdotnet/deployment-template</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
