--- a/tests/MyLibraryTests/MyLibraryTests.csproj
+++ b/tests/MyLibraryTests/MyLibraryTests.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\MyLibrary\MyLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
