--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -66,6 +66,7 @@ jobs:
         name: v${{ github.event.inputs.versionIncrement }}
         body: ${{ steps.changelog.outputs.changes }}
         draft: false
+        prerelease: ${{ github.event.inputs.prerelease }}
 
     - name: Create release package
       run: |
